Fix small-screen warning not showing because of min-width

--- a/public/blocking.css
+++ b/public/blocking.css
@@ -1,8 +1,13 @@
 html,
 body {
     min-height: 560px;
-    min-width: 1152px !important;
+    min-width: 1150px !important;
     height: 100%;
+}
+html.mobile,
+html.mobile body {
+    min-width: 0 !important;
+    min-height: 0;
 }
 
 .nq-icon {
